# crawlr

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  main.cpp
Crawlr/: CMakeLists.txt  Crawlr.hpp
Crawlr/include/: Export.hpp  HookAnalysis.hpp  Module.hpp  ModuleExports.hpp  ModuleParser.hpp  Signature.cpp  Signature.hpp  Syscall.hpp  SyscallParser.hpp
Crawlr/include/detail/: DebugPrint.hpp  NativeDefs.hpp
Crawlr/src/: HookAnalysis.cpp  HookAnaylsis.cpp  Module.cpp  ModuleExports.cpp  ModuleParser.cpp  Signature.cpp  Syscall.cpp  SyscallLibrary.cpp  SyscallParser.cpp
tests/: CMakeLists.txt  main.cpp
tests/integration/: SyscallInvocation_test.cpp
